feat: Add Java9+ support